@@ -16,5 +16,19 @@
     <string id="30206">Geen TV-bronnen gevonden!</string>
     <string id="30207">Geen afleveringen gevonden voor </string>
     <string id="30208">Voor hulp, stel vragen op het XBMC forum.</string>
+    <string id="30209">Afleveringen opvragen van </string>
+    <string id="30210">Gescand: </string>
+    <string id="30211"> mappen, </string>
+    <string id="30212"> bestanden</string>
+    <string id="30213">Pad: </string>
+    <string id="30214">Bezig met scannen</string>
+    <string id="30215">Scan gestart</string>
+    <string id="30216">Filmbronnen opvragen</string>
+    <string id="30217">Films opvragen</string>
+    <string id="30218">Ongescande films uitzoeken</string>
+    <string id="30219">Lijst invullen</string>
+    <string id="30220">TV-bronnen opvragen</string>
+    <string id="30221">Afleveringen opvragen</string>
+    <string id="30222">Ongescande afleveringen uitzoeken</string>
 </strings>
 
